plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.13'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.github.spotbugs' version '6.0.26'
}

group = 'jp.lg.asp.accommodation'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    maven { url = 'https://jasperreports.sourceforge.net/maven2' }
    maven { url = 'https://jaspersoft.jfrog.io/artifactory/jr-ce-releases' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // JasperReports
    implementation('net.sf.jasperreports:jasperreports:7.0.6') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation('net.sf.jasperreports:jasperreports-pdf:7.0.6') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation('net.sf.jasperreports:jasperreports-fonts:7.0.6') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation('net.sf.jasperreports:jasperreports-jdt:7.0.6') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation 'org.eclipse.jdt:ecj:3.38.0'

    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jar {
    enabled = false
}

spotbugs {
    ignoreFailures = false
    effort = 'max'
    reportLevel = 'medium'
    excludeFilter = file("${rootProject.projectDir}/spotbugs-exclude.xml")
}

spotbugsMain {
    reports {
        html { required = true }
        xml { required = false }
    }
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
    enabled = project.hasProperty('runSpotbugs')
}

tasks.named('test') {
    useJUnitPlatform()
}
